# airflow-dbt-cosmos-infra

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
airflow/config/: airflow-cfg.env
airflow/dags/: .airflowignore
airflow/dags/cosmos_postgres/: dag.py
airflow/dags/dag_a/: dag.py
airflow/dags/dbt/: pyproject.toml  requirements.txt
airflow/dags/dbt/my_postgres/: dbt_project.yml
airflow/dags/dbt/my_postgres/models/: sources.yml
airflow/dags/dbt/my_postgres/models/marts/: fct_user_profit.sql.sql
airflow/dags/dbt/my_postgres/models/staging/: stg_transactions.sql
airflow/dags/dbt/my_postgres/seeds/: raw_transactions.csv  raw_users.csv
airflow/dbt_docs_dir/: catalog.json  manifest.json
airflow/script/: init-db.sql
script/: setup_env.sh
